update file gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,19 @@
+# IDE e IntelliJ (Android Studio)
+.idea/
 *.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
+*.ipr
+*.iws
+
+# Archivos de compilación y temporales
+.gradle/
+build/
+captures/
+.externalNativeBuild/
+.cxx/
+
+# Configuración local y secretos
 local.properties
+.DS_Store
+
+# Archivos de sistema
+/out
